<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="dark_theme">Темная тема</string>
    <string name="users_agreement">Пользовательское соглашение</string>
    <string name="practicum">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="for_dev">Сообщение разработчикам и разработчицам Playlist Maker</string>
    <string name="thanks_dev">Спасибо разработчикам и разработчицам за крутое приложение</string>
    <string name="dev_email">Maxim.kolotowckin@yandex.ru</string>
    <string name="users_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="refresh">Обновить</string>
    <string name="trouble_with_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="empty_search_result">Ничего не нашлось</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="country">Страна</string>
    <string name="album">Альбом</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="add_new_playlist">Новый плейлист</string>
    <string name="no_playlist">Вы не создали \nни одного плейлиста</string>
    <string name="empty_mediateca">Ваша медиатека пуста</string>
    <string name="favorite">Избранное</string>
    <string name="playlists">Плейлисты</string>
</resources>