<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:layout="@layout/settings_fragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/settings_left_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/settings_guideLine" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/settings_tool_bar_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/song_page_toolbar_guideline" />

    <TextView
        style="@style/back_bar_text"
        android:text="@string/settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switch"
        style="@style/settings_text_style"
        android:theme="@style/switch_style"
        android:text="@string/dark_theme"
        android:layout_gravity="start"
        android:layout_width="0dp"
        android:layout_height="@dimen/settings_string_height"
        android:layout_marginEnd="@dimen/settings_switch_end"
        app:layout_constraintTop_toBottomOf="@id/settings_tool_bar_line"
        app:layout_constraintStart_toEndOf="@id/settings_left_line"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/share"
        style="@style/settings_text_style"
        android:text="@string/share"
        android:drawableEnd="@drawable/share"
        android:layout_marginEnd="@dimen/settings_share_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/settings_left_line"
        app:layout_constraintTop_toBottomOf="@id/theme_switch"/>

    <TextView
        android:id="@+id/support"
        style="@style/settings_text_style"
        android:text="@string/support"
        android:drawableEnd="@drawable/support"
        android:layout_marginEnd="@dimen/settings_support_icon_end"
        app:layout_constraintTop_toBottomOf="@id/share"
        app:layout_constraintStart_toEndOf="@id/settings_left_line"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/usersAgreement"
        style="@style/settings_text_style"
        android:text="@string/users_agreement"
        android:drawableEnd="@drawable/user_agreement"
        android:layout_marginEnd="@dimen/settings_users_agreement_icon_end"
        app:layout_constraintTop_toBottomOf="@id/support"
        app:layout_constraintStart_toEndOf="@id/settings_left_line"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>