<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/back_bar">

        <ImageView
            android:id="@+id/back"
            style="@style/back_image"/>

        <TextView
            style="@style/back_bar_text"
            android:text="@string/settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_string_size"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                style="@style/settings_text_style"
                android:text="@string/dark_theme" />

            <Switch
                android:id="@+id/theme"
                android:layout_width="56dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:paddingVertical="11dp"
                android:paddingRight="9dp"
                android:theme="@style/switch_style"
                android:trackTint="@color/trackGray" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_string_size"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/share"
                style="@style/settings_text_style"
                android:text="@string/share" />

            <ImageView
                style="@style/settings_image"
                android:src="@drawable/share"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="22dp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_string_size"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/support"
                style="@style/settings_text_style"
                android:text="@string/support" />

            <ImageView
                style="@style/settings_image"
                android:src="@drawable/support"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="22dp"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <TextView
                android:id="@+id/usersAgreement"
                style="@style/settings_text_style"
                android:text="@string/users_agreement" />

            <ImageView
                style="@style/settings_image"
                android:src="@drawable/user_agreement"
                android:layout_marginEnd="36dp"
                android:layout_marginTop="24dp"/>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>