<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/ever_white"
            android:textSize="26sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_button"
            android:layout_marginHorizontal="@dimen/main_button_horizontal"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/ever_white"
            android:text="@string/search"
            android:textColor="@color/ever_black"
            android:textSize="@dimen/main_text_size"
            app:cornerRadius="@dimen/main_corner_raius"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_icon_padding"
            app:iconTint="@color/ever_black"
            android:textAllCaps="false"
            android:foreground="?attr/selectableItemBackground"/>
        <Button
            android:id="@+id/media_button"
            android:layout_marginHorizontal="@dimen/main_button_horizontal"
            android:layout_marginTop="@dimen/main_button_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/ever_white"
            android:text="@string/media"
            android:textColor="@color/ever_black"
            android:textSize="@dimen/main_text_size"
            app:cornerRadius="@dimen/main_corner_raius"
            app:icon="@drawable/media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_icon_padding"
            app:iconTint="@color/ever_black"
            android:textAllCaps="false"
            android:foreground="?attr/selectableItemBackground"/>
        <Button
            android:id="@+id/settings_button"
            android:layout_marginBottom="28dp"
            android:layout_marginHorizontal="@dimen/main_button_horizontal"
            android:layout_marginTop="@dimen/main_button_between"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/ever_white"
            android:text="@string/settings"
            android:textColor="@color/ever_black"
            android:textSize="@dimen/main_text_size"
            app:cornerRadius="@dimen/main_corner_raius"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/main_icon_padding"
            app:iconTint="@color/ever_black"
            android:textAllCaps="false"
            android:foreground="?attr/selectableItemBackground"/>


    </LinearLayout>

</LinearLayout>