<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/song_page_back"
        style="@style/back_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/tool_bar_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/song_page_toolbar_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/song_page_vertical_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/write_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/song_page_vertical_guideline" />

    <ImageView
        android:id="@+id/track_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@id/left_line"
        app:layout_constraintTop_toTopOf="@id/tool_bar_line"
        app:layout_constraintEnd_toEndOf="@id/write_line"
        app:layout_constraintDimensionRatio="1:1"/>

    <TextView
        android:id="@+id/song_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/song_page_name_top"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/song_page_text_name_size"
        android:textFontWeight="400"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@id/track_cover"
        app:layout_constraintStart_toStartOf="@id/left_line"
        app:layout_constraintEnd_toEndOf="@id/write_line"/>

    <TextView
        android:id="@+id/group_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/song_page_group_top"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/song_page_text_group_and_progress_size"
        android:textFontWeight="400"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@id/song_name"
        app:layout_constraintStart_toStartOf="@id/left_line"
        app:layout_constraintEnd_toEndOf="@id/write_line"/>

    <ImageButton
        android:id="@+id/play_button"
        android:src="@drawable/play_button"
        android:layout_width="@dimen/song_page_play_button_size"
        android:layout_height="@dimen/song_page_play_button_size"
        android:layout_marginTop="@dimen/song_page_play_button_top"
        android:gravity="center_horizontal"
        android:background="@drawable/oval_button"
        app:layout_constraintTop_toBottomOf="@id/group_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/playlist_button"
        android:layout_width="@dimen/song_page_like_and_playlist_button_size"
        android:layout_height="@dimen/song_page_like_and_playlist_button_size"
        android:layout_marginTop="@dimen/song_page_like_and_playlist_button_top"
        android:background="@drawable/oval_button"
        android:src="@drawable/playlist_button"
        app:layout_constraintEnd_toStartOf="@id/play_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/left_line"
        app:layout_constraintTop_toBottomOf="@id/group_name" />

    <ImageButton
        android:id="@+id/like_button"
        android:layout_width="@dimen/song_page_like_and_playlist_button_size"
        android:layout_height="@dimen/song_page_like_and_playlist_button_size"
        android:layout_marginTop="@dimen/song_page_like_and_playlist_button_top"
        android:background="@drawable/oval_button"
        android:src="@drawable/like_button"
        app:layout_constraintEnd_toEndOf="@id/write_line"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/play_button"
        app:layout_constraintTop_toBottomOf="@id/group_name" />

    <TextView
        android:id="@+id/play_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/song_page_text_group_and_progress_size"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_button"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/information_left_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/information_write_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <TextView
        android:id="@+id/duration_value"
        style = "@style/song_page_information_text_style"
        android:layout_marginTop="@dimen/song_page_information_text_top"
        android:text="@string/duration"
        app:layout_constraintStart_toStartOf="@id/information_left_line"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/album_value"
        style = "@style/song_page_information_text_style"
        android:text="@string/album"
        app:layout_constraintStart_toStartOf="@id/information_left_line"
        app:layout_constraintTop_toBottomOf="@id/duration_value"/>

    <TextView
        android:id="@+id/year_value"
        style = "@style/song_page_information_text_style"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="@id/information_left_line"
        app:layout_constraintTop_toBottomOf="@id/album_value"/>

    <TextView
        android:id="@+id/genre_value"
        style = "@style/song_page_information_text_style"
        android:text="@string/genre"
        app:layout_constraintStart_toStartOf="@id/information_left_line"
        app:layout_constraintTop_toBottomOf="@id/year_value"/>

    <TextView
        android:id="@+id/country_value"
        style = "@style/song_page_information_text_style"
        android:text="@string/country"
        app:layout_constraintStart_toStartOf="@id/information_left_line"
        app:layout_constraintTop_toBottomOf="@id/genre_value"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/information_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:barrierDirection="end"
        app:constraint_referenced_ids="duration_value"/>

    <TextView
        android:id="@+id/song_duration"
        style="@style/song_page_item_value_information"
        android:layout_marginTop="@dimen/song_page_information_text_top"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        app:layout_constraintStart_toEndOf="@id/information_barrier"
        app:layout_constraintEnd_toEndOf="@id/information_write_line"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/song_album_name"
        style="@style/song_page_item_value_information"
        app:layout_constraintStart_toEndOf="@id/information_barrier"
        app:layout_constraintEnd_toEndOf="@id/information_write_line"
        app:layout_constraintTop_toBottomOf="@id/song_duration" />

    <TextView
        android:id="@+id/song_year"
        style="@style/song_page_item_value_information"
        app:layout_constraintStart_toEndOf="@id/information_barrier"
        app:layout_constraintEnd_toEndOf="@id/information_write_line"
        app:layout_constraintTop_toBottomOf="@id/song_album_name" />

    <TextView
        android:id="@+id/song_genre"
        style="@style/song_page_item_value_information"
        app:layout_constraintStart_toEndOf="@id/information_barrier"
        app:layout_constraintEnd_toEndOf="@id/information_write_line"
        app:layout_constraintTop_toBottomOf="@id/song_year" />

    <TextView
        android:id="@+id/song_country"
        style="@style/song_page_item_value_information"
        app:layout_constraintStart_toEndOf="@id/information_barrier"
        app:layout_constraintEnd_toEndOf="@id/information_write_line"
        app:layout_constraintTop_toBottomOf="@id/song_genre" />

</androidx.constraintlayout.widget.ConstraintLayout>