<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        style="@style/back_bar">

        <ImageView
            android:id="@+id/back_search"
            style="@style/back_image"/>

        <TextView
            style="@style/back_bar_text"
            android:text="@string/search"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_searchString_height"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/search_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="2dp"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginVertical="18dp"
            android:layout_marginLeft="28dp"
            android:src="@drawable/hint_search"
            android:backgroundTint="@color/searchGray"/>

        <EditText
            style = "@style/textStyle_YSregular_400"
            android:id="@+id/searchText"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/search_searchString_margineRight"
            android:layout_marginLeft="@dimen/search_searchString_margineLeft"
            android:layout_marginVertical="@dimen/search_searchString_margineVertical"
            android:background="@color/searchGray"
            android:textColorHint="@color/hint_search_gray"
            android:textColor="@color/ever_black"
            android:textSize="@dimen/settings_text_size"
            android:hint="@string/search"
            android:lines="1"
            android:inputType="text"
            android:focusable="true"/>

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/clearButton"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:layout_marginVertical="8dp"
            android:layout_gravity="end"
            android:layout_marginEnd="22dp"
            android:visibility="gone"
            android:backgroundTint="@color/searchGray"
            app:icon="@drawable/clear"
            app:iconGravity="textEnd"
            app:iconPadding="6dp"
            app:iconTint="@color/hint_search_gray"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/x"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/search_recycler_view_top">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/search_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/history_title"
                style="@style/textStyle_YSmedium_500"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/search_history"
                android:layout_gravity="center_horizontal"
                android:textSize="19sp"
                android:textColor="@color/black"
                android:gravity="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/clear_history_button"
                style="@style/clearHistory_button_style"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/something_wrong_image"
            style="@style/something_wrong_image"
            android:src = "@drawable/empty_search"
            android:visibility="gone"
            tools:src="@drawable/trouble_with_internet"/>

        <TextView
            android:id="@+id/something_wrong_text"
            style="@style/something_wrong_text"
            android:visibility="gone"
            tools:text="@string/trouble_with_internet"/>

        <Button
            android:id = "@+id/refresh_button"
            style="@style/refresh_button"
            android:visibility="gone"/>

    </FrameLayout>

</LinearLayout>